Change the color of the background image and fix the background covering issue for the Gallery in style.css.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,6 +188,7 @@ footer div {
 .about-us h3,
 .testimonies h3,
 .activities-sections h3,
+.gallery-title h3,
 .tips-titles h3 span {
     font-family: "Cormorant Garamont", sans-serif;
     font-size: 1.6rem;
@@ -204,6 +205,7 @@ for the following css to make text more readable.*/
 .about-us h3,
 .testimonies h3,
 .activities-sections h3,
+.gallery-title h3,
 .tips-titles h3 span {
     text-shadow:
     0.05em 0 black,
@@ -486,53 +488,39 @@ for the following css to make text more readable.*/
 
 .gallery-wrapper {
     height: 100vh;
-    background: #84a9d9 url("../images/background/dublin-bay.jpg") top right no-repeat;
+    background: #84a9d9 url("../images/background/dublin-bay.jpg") center no-repeat;
     background-size: cover;
     background-attachment: fixed;
 }
 
 .gallery-title {
-    height: 20vh;
     padding-top: 160px;
-    padding-bottom: 60px;
 }
 
 .gallery-title h3 {
-    font-family: "Cormorant Garamont", sans-serif;
-    font-size: 1.8rem;
-    font-weight: 500;
-    text-align: center;
-    letter-spacing: 3px;
+    margin: auto;
 }
 
+/* Responsive title size */
 @media (max-width: 750px){
     .gallery-title h3 {
-        font-size: 14px;    
+        font-size: 18px;    
     }
 }
 
-.carousel-outer {
-    height: 100%;
-    margin-bottom: 55px;
-}
-
 .carousel-item img {
-    height: auto;
-}
-
-#gallery {
-    margin-bottom: 55px;
+    border: 2px solid black;
 }
 
 /* Modify the position and style of the carousel's elements */
-.carousel {
-    position: relative;
+
+#gallery,
+#gallery-md {
+    margin: 64px 8px 0 8px;
 }
 
 .carousel-indicators {
-    position: absolute;
     bottom: -60px;
-    background-color: black;
 }
 
 .carousel-indicators li {
@@ -541,6 +529,7 @@ for the following css to make text more readable.*/
 }
 
 .carousel-controls {
+    opacity: 0.8;
     font-size: 2rem;
     text-decoration: none;
 }
